*terraform-0.10.0 (17 Aug 2017)
*terraform-0.10.1 (17 Aug 2017)
*terraform-0.10.2 (17 Aug 2017)
*terraform-0.9.11 (17 Aug 2017)

  17 Aug 2017;  <cameron@gentoo.org> +terraform-0.10.0.ebuild,
  +terraform-0.10.1.ebuild, +terraform-0.10.2.ebuild, +terraform-0.9.11.ebuild,
  -terraform-0.9.2.ebuild, -terraform-0.9.3.ebuild, -terraform-0.9.4.ebuild,
  -terraform-0.9.5.ebuild, -terraform-0.9.6.ebuild:
  app-admin/terraform: