@@ -1,5 +1,6 @@
 DIST terraform-0.10.0.tar.gz 6962906 SHA256 37fad4afde1978d0a4841176b577a2e446144cec836fb14f177704d111c72f0a SHA512 091f2e427c588958da018cc00ec334fd10e18e813981949fe32e8f84a1bda80d69401364d16357e61dbbc9fab0aef4616701e99109bcb79b9483c8350914135c WHIRLPOOL 241e61de6a5dbcfb3629bcc5bcda6a2aa9974fee6838ac5a0e9d567223bace634797e10adb8dd6f1f87331f97ac507712e4ce7ff585e6fbd834fc91a93c24d01
 DIST terraform-0.10.1.tar.gz 6936693 SHA256 30ba707fd22ef1340f8a2b3add461d8bf93acc11621b2554ec55e005ae47af74 SHA512 8998696e8d04533e394ca3ae077f720326a508446a3d900f8cb1c70077ee6a0d1889ca36d78e4cbe83f7d8eb1a81219dd3441229550723e953d45f27108e67b0 WHIRLPOOL 379366556455ce4412b655e8a47adaca052cf57c7f869f0afbc9b1b38aae2593ff478cf97f518952bced3701999d255a759e2ab94a0341c091288f04c647933c
 DIST terraform-0.10.2.tar.gz 6936836 SHA256 2a1e4e92b480aaf996fda073503f7bfb4039152cf7d19e5598aca45a00196150 SHA512 6ae7a537c069fd73ac41bc1a5ab52bbe85938b34611ce92df5fb7248110ac8316ebc7a042c06dce2923b99878ee14384ee3bd455f363faba2c66b72018931aa8 WHIRLPOOL 6b927b89a9a1410bd3ed9e224b1e06c71f30d2765c4fffa96e7395aaf8f44092ba7f296150225b3eaeac3a052f54a2c0c02f495f7040948a1eb0d9fb136b3a09
+DIST terraform-0.10.3.tar.gz 8065950 SHA256 a87fd97649f6ebabac243a85a09dfb0a16dc351fb9bb799fbdf076d35734cc74 SHA512 693490e39672627c0782d80d51de1f56317d07a6eebeb60f65e0697a35c953d6cc50744c57838a1020ed7a30b26a1e154b724de851bca55ff5ee3a80f7311e8e WHIRLPOOL 081c4a3ed1122202af15761ec4b0ce8fcc65c8bb56e54c7d40a77fd55a1ac22c991696bf83814b541199f636fbee4f0ba119343dce1e5ba25c730bf1aedfa6de
 DIST terraform-0.8.8.tar.gz 14407438 SHA256 030714052a63dbdadc7cf290256a1c88ccad53650481129528495dd271ee11d2 SHA512 7eced021bc2814b89955d520ccf52970b705afc38cd7ab018e7eb7682e32db2e8e803d2b0ef925e14bc8ee576e4d997ae53818226a43616a600884d3ae024f20 WHIRLPOOL 2208955a08abad7fadeb973d83684fc1c1b35dcf218d2c1bf20ee2a20b7f3e0b878c351d77878fd26ae9ebe13686043738ff4b066f38768e8bfe3081347a948b
 DIST terraform-0.9.11.tar.gz 17785070 SHA256 400fbf7c65a5f4b599d1b3d20db8ad9d45930a80ce3abf14aa7ed56eac22b3fb SHA512 73c16c8bf1e006bce23db26657de7ad130c049c137c23c0fd82c509a145303ebdac141b971f87d9cd0d5b193ca262c09787ff879e5588b90f87a764874b509db WHIRLPOOL b4ab7bd498138eb786dcb22e4a60da9267760a456625d31fe5837f1c61cd6ad4efb2c9d8c8f6f7e430ae2d0dc424de5ab32e3b700aba78eb6176ee24e4f6c27f
